--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^2.2.1",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
